# routes/v1.php
@@ -15,10 +15,14 @@ Route::middleware('api-log')->group(function () {
         Route::post('logout', [UserController::class, 'logout']);
         Route::patch('reset-password', [UserController::class, 'resetPassword']);
 
-        Route::post('/user/preferences', [UserPreferenceController::class, '__invoke']);
-        Route::get('/user/preferences', [UserPreferenceController::class, 'index']);
+        Route::prefix('user')->group(function () {
+            Route::post('/preferences', [UserPreferenceController::class, '__invoke']);
+            Route::get('/preferences', [UserPreferenceController::class, 'index']);
+            Route::get('/newsfeed', [UserPreferenceController::class, 'getNewsfeed']);
+        });
 
         Route::prefix('articles')->group(function () {
+            Route::get('/details/{articleId}', [ArticleController::class, 'view']);
             Route::get('/{categoryId?}/{sourceId?}', [ArticleController::class, 'index']);
 
         });
